<resources>
    <string name="app_name">Remote Monitoring System</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <string name="mobile_number_label">Parent\'s Mobile Number</string>
    <string name="mobile_number_key">mobile_key</string>
    <string name="mobile_default">0</string>

    <string name="speed_limit_label">Speed Limit In km/h</string>
    <string name="speed_limit_key">speed_key</string>
    <string name="speed_limit_default">60</string>

    <string name="latitude_label">House\'s Latitude</string>
    <string name="latitude_key">lat_key</string>
    <string name="latitude_default">33.3434</string>

    <string name="longitude_label">House\'s Longitude</string>
    <string name="longitude_key">lng_key</string>
    <string name="longitude_default">77.83</string>

    <string name="distance_limit_label">Distance Limit In km</string>
    <string name="distance_limit_key">distance_key</string>
    <string name="distance_limit_default">10</string>
</resources>
